# Condensed-Matter-Lab-Spring-2026-

./: pyproject.toml
BH Curve/: script.py
BH Curve/final/: analysis_summary.txt  bh_analysis_results.csv  comparison_table_v3.csv  important_results_table.csv  important_results_table.md  important_results_table.tex
Hall Probe/: config.json  script.py
Hall Probe/final/: analysis_report.txt
Lattice Dynamics/: config.json  script.py
Lattice Dynamics/data/: di_readings.csv  mono_readings.csv
Lattice Dynamics/final/: analysis_summary.txt  data_table.tex
Paramagnetic Susceptibility/: config.json  script.py
Paramagnetic Susceptibility/data/: calibration.csv  experiment_1.csv  experiment_2.csv  experiment_3.csv
Paramagnetic Susceptibility/final/: report.txt
Paramagnetic Susceptibility/sample_data/: calibration.csv  experiment_1.csv
Thermoelectric Effect/: script.py
curie_temperature/: README.md  analysis.py  config.py  plotting.py  print.xlsx  utils.py
curie_temperature/data/: SC1_22nF_raw_data.csv  SC2_39nF_raw_data.csv  SC3_62nF_raw_data.csv
lattice-dynamics/: README.md
